--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,8 @@
 <div class="row">
-  <div class="col-md-12 p-5 bg-secondary">
-    Footer
+  <div class="col-md-12 p-5 bg-secondary text-center">
+    <p class="font-italic text-light">
+      Bellas Cejas Todos los Derechos Reservados <br />
+      Sitio en Desarrollo
+    </p>
   </div>
 </div>
