--- a/views/partials/servicios.ejs
+++ b/views/partials/servicios.ejs
@@ -7,13 +7,19 @@
           src="images/microblading_card.jpg"
           alt="Card image cap"
         />
-        <div class="card-body">
+        <div class="card-body d-flex flex-column">
           <h5 class="card-title">Microblading</h5>
           <p class="card-text text-justify">
             Embellece tus cejas con la ultima tecnica de maquillaje
             semipermanente, sin dolor, con resultados garantizados
           </p>
-          <button type="button" class="btn btn-primary">Reserva</button>
+          <a
+            href="https://bellascejas.setmore.com"
+            target="_blank"
+            class="mt-auto"
+          >
+            <button type="button" class="btn btn-primary">Reserva</button>
+          </a>
         </div>
       </div>
       <div class="card">
@@ -22,13 +28,19 @@
           src="images/pestanas_card.jpg"
           alt="Card image cap"
         />
-        <div class="card-body">
+        <div class="card-body d-flex flex-column">
           <h5 class="card-title">Extensiones de pestañas</h5>
           <p class="card-text text-justify">
             Tu miranda es lo mas importante y unas pestañas abundantes cambiaran
             tu look naturalmente. Con efecto 2D, 3D, 4D y hasta 7D.
           </p>
-          <button type="button" class="btn btn-primary">Reserva</button>
+          <a
+            href="https://bellascejas.setmore.com"
+            target="_blank"
+            class="mt-auto"
+          >
+            <button type="button" class="btn btn-primary">Reserva</button>
+          </a>
         </div>
       </div>
       <div class="card">
@@ -37,14 +49,20 @@
           src="images/limpieza_card.jpg"
           alt="Card image cap"
         />
-        <div class="card-body">
-          <h5 class="card-title">Limpieza facial</h5>
+        <div class="card-body d-flex flex-column">
+          <h5 class="card-title">Tratamientos Faciales</h5>
           <p class="card-text text-justify">
-            This is a wider card with supporting text below as a natural lead-in
-            to additional content. This card has even longer content than the
-            first to show that equal height action.
+            Tratamientos especiales para cuidar tu rostro y dejarlo radiante.
           </p>
-          <button type="button" class="btn btn-primary">Reserva</button>
+          <a
+            href="https://bellascejas.setmore.com"
+            target="_blank"
+            class="mt-auto"
+          >
+            <button type="button" class="btn btn-primary">
+              Reserva
+            </button>
+          </a>
         </div>
       </div>
     </div>
