--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,10 @@
 <div class="row" id="header__container">
-  <div class="col-lg-12 text-center">
-    <div id="header__logo__container">
-      <img src="images/logo.png" alt="Logo Bellas Cejas" id="header__logo" />
-    </div>
+  <div class="col-lg-12 text-center" id="header__logo__container">
+    <img
+      src="images/logo.png"
+      alt="Logo Bellas Cejas"
+      id="header__logo"
+      class="mx-auto d-block"
+    />
   </div>
 </div>
