--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -28,7 +28,7 @@
         <li class="nav-item">
           <a class="nav-link" href="#servicios">Servicios </a>
         </li>
-        <a href="https://bellascejas.setmore.com">
+        <a href="https://bellascejas.setmore.com" target="_blank">
           <button type="button" class="btn btn-primary btn-sm">
             Reserva tu hora
           </button>
