heroku procfile mobile view added

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -30,3 +30,7 @@
   integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q"
   crossorigin="anonymous"
 />
+
+<!-- MOBILE VIEW -->
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
