--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <% include partials/head %>
+  <% include partials/allpages/head %>
   <body>
     <!-- prettier-ignore -->
-    <% include partials/numberbar %>
-    <% include partials/navbar %>
+    <% include partials/allpages/numberbar %>
+    <% include partials/allpages/navbar %>
     <% include partials/header %>
     <div class="container">
       <!-- prettier-ignore -->
       <% include partials/servicios %>
+      <% include partials/cursos %>
     </div>
     <!-- prettier-ignore -->
-    <% include partials/footer %> 
-    <% include partials/scripts %>
+    <% include partials/allpages/footer %> 
+    <% include partials/allpages/scripts %>
   </body>
 </html>
