--- a/views/partials/servicios.ejs
+++ b/views/partials/servicios.ejs
@@ -1,6 +1,7 @@
 <div class="row" id="servicios">
-  <div class="col-md-12 p-5">
-    <div class="card-deck">
+  <div class="col-md-12 p-5 text-center">
+    <h2 class="mb-5">Servicios</h2>
+    <div class="card-group">
       <div class="card">
         <img
           class="card-img-top"
