--- a/views/partials/allpages/navbar.ejs
+++ b/views/partials/allpages/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <a class="navbar-brand" href="#" id="title">
+    <a class="navbar-brand" href="/" id="title">
       Bellas Cejas
     </a>
     <button
@@ -18,15 +18,17 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#"
+          <a class="nav-link" href="/"
             >Home <span class="sr-only">(current)</span></a
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#cursos">Cursos </a>
+          <a class="nav-link" href="/curso-de-microblading"
+            >Curso de microblading
+          </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#servicios">Servicios </a>
+          <a class="nav-link" href="/#servicios">Servicios </a>
         </li>
         <a href="https://bellascejas.setmore.com" target="_blank">
           <button type="button" class="btn btn-primary btn-sm">
