landing page in place

--- a/views/cursodemicroblading.ejs
+++ b/views/cursodemicroblading.ejs
@@ -168,6 +168,7 @@
         </a>
       </div>
     </div>
+    <% include partials/cursos %>
     <!-- prettier-ignore -->
     <% include partials/allpages/footer %> 
     <% include partials/allpages/scripts %>
