--- a/views/partials/cursos.ejs
+++ b/views/partials/cursos.ejs
@@ -1,4 +1,4 @@
-<div class="row" id="cursos">
+<div class="row bg-light" id="cursos">
   <div class="col-md-12 p-5 text-center">
     <h2 class="mb-5">Curso de microblading</h2>
     <div class="card-deck mb-3 text-center">
@@ -75,6 +75,47 @@
           </ul>
           <a
             href="https://www.flow.cl/btn.php?token=ag7rqm1"
+            target="_blank"
+            class="mt-auto"
+          >
+            <button type="button" class="btn btn-lg btn-block btn-primary">
+              Inscribete ahora
+            </button>
+          </a>
+        </div>
+      </div>
+      <div class="card mb-4 shadow-sm">
+        <div class="card-header">
+          <h4 class="my-0 font-weight-normal">Grupal GOLD</h4>
+        </div>
+        <div class="card-body d-flex flex-column">
+          <h1 class="card-title pricing-card-title">
+            350.000 <small class="text-muted">CLP</small>
+          </h1>
+          <ul class="list-unstyled mt-3 mb-4">
+            <li>
+              <i class="fas fa-check"></i>
+
+              12 hrs de video
+            </li>
+            <li>
+              <i class="fas fa-check"></i>
+
+              Dos dias de practicas presenciales con la profesora
+            </li>
+            <li>
+              <i class="fas fa-check"></i>
+
+              Asesoria directa via whatsapp y llamadas
+            </li>
+            <li>
+              <i class="fas fa-check"></i>
+
+              Diploma de certificacion
+            </li>
+          </ul>
+          <a
+            href="https://www.flow.cl/btn.php?token=c9bqsi3"
             target="_blank"
             class="mt-auto"
           >
