--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,9 +3,9 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-li {
+/* li {
   font-size: 1.8em;
-}
+} */
 
 h3.titles {
   font-size: 2em;
