--- a/views/cursodemicroblading.ejs
+++ b/views/cursodemicroblading.ejs
@@ -12,48 +12,41 @@
     </div>
     <div class="container p-5">
       <div class="row">
-        <div class="col-md-7 text-center">
+        <div class="col-12 text-center">
           <h4 class="mb-4">👇 Lo que dicen de nosotros 👇</h4>
-          <div class="row">
-            <iframe
-              width="560"
-              height="315"
-              src="https://www.youtube-nocookie.com/embed/_YMCugve7bM"
-              frameborder="0"
-              allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            >
-            </iframe>
-          </div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
-            debitis omnis unde quas dolorem provident consectetur reiciendis
-            repellendus ipsum temporibus pariatur doloremque eveniet molestias.
-          </p>
+          <iframe
+            src="https://www.youtube-nocookie.com/embed/_YMCugve7bM"
+            frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          >
+          </iframe>
         </div>
-        <div class="col-md-5 text-center">
+        <div class="col-12 text-center">
           <h4 class="mb-4">Multiples modalidades para elegir</h4>
-          <table class="table table-bordered">
-            <thead class="thead-dark">
-              <tr>
-                <th scope="col">Modalidad</th>
-                <th scope="col">Fecha</th>
-                <th scope="col">Lugar</th>
-                <th scope="col">Horario</th>
-              </tr>
-            </thead>
-            <tbody>
-              <!-- prettier-ignore -->
-              <% for(let curso of cursos){ %>
-              <tr>
-                <td><%= curso.nombre %></td>
-                <td><%= curso.fecha %></td>
-                <td><%= curso.lugar %></td>
-                <td><%= curso.horario %></td>
-              </tr>
-              <% } %>
-            </tbody>
-          </table>
+          <div class="table-responsive-sm">
+            <table class="table table-bordered">
+              <thead class="thead-dark">
+                <tr>
+                  <th scope="col">Modalidad</th>
+                  <th scope="col">Fecha</th>
+                  <th scope="col">Lugar</th>
+                  <th scope="col">Horario</th>
+                </tr>
+              </thead>
+              <tbody>
+                <!-- prettier-ignore -->
+                <% for(let curso of cursos){ %>
+                <tr>
+                  <td><%= curso.nombre %></td>
+                  <td><%= curso.fecha %></td>
+                  <td><%= curso.lugar %></td>
+                  <td><%= curso.horario %></td>
+                </tr>
+                <% } %>
+              </tbody>
+            </table>
+          </div>
           <a href="#">
             <button type="button" class="btn btn-primary btn-lg">
               Inscribete ahora
@@ -65,14 +58,14 @@
     <!-- SECCION -->
     <!-- PARA QUIEN ES -->
     <div class="row align-items-center p-5">
-      <div class="col-md-6 text-center pt-5">
+      <div class="col-12 text-center pt-5">
         <img
           src="images/curso_microblading_3.jpg"
           class="img-fluid"
           alt="kits"
         />
       </div>
-      <div class="col-md-6 pt-5 text-center">
+      <div class="col-12 pt-5 text-center">
         <h3 class="titles text-left">
           ¿Para quien es este curso?
           <i class="fas fa-check-double"></i>
@@ -99,7 +92,7 @@
     </div>
     <!-- QUE APRENDERAS -->
     <div class="row align-items-center bg-light p-5">
-      <div class="col-md-6 pt-5 text-center">
+      <div class="col-12 pt-5 text-center">
         <h3 class="titles text-left">
           ¿Qué aprenderas? <i class="fas fa-user-graduate" id="big-icon"></i>
         </h3>
@@ -121,7 +114,7 @@
           </button>
         </a>
       </div>
-      <div class="col-md-6 pt-5 text-center">
+      <div class="col-12 pt-5 text-center">
         <img
           src="images/curso_microblading_2.jpg"
           class="img-fluid"
@@ -131,21 +124,21 @@
     </div>
     <!-- KIT INCLUIDO -->
     <div class="row align-items-center p-5">
-      <div class="col-md-6 text-center pt-5" id="kits__image">
+      <div class="col-12 text-center pt-5" id="kits__image">
         <img
           src="images/curso_microblading_1.jpg"
           class="img-fluid"
           alt="kits"
         />
       </div>
-      <div class="col-md-6 pt-5 text-center">
+      <div class="col-12 pt-5 text-center">
         <h3 class="titles text-left">
           ¿Qué incluye el kit? <i class="fas fa-gift" id="big-icon"></i>
         </h3>
         <ul class="mt-4 text-left mb-5">
           <li>Microblading técnica pelo a pelo.</li>
           <li>Anillos portapigmentos</li>
-          <li>Pigmento PCD</li>
+          <li>Pigmento Biomaser</li>
           <li>Microagujas</li>
           <li>Tebori o plumilla</li>
           <li>Piel sintética</li>
@@ -156,7 +149,6 @@
           <li>Gorro</li>
           <li>Mascarilla</li>
           <li>Corta cartón</li>
-          <li>Hilo</li>
           <li>Microaplicador</li>
           <li>Consentimiento informado</li>
           <li>Material escrito para soporte</li>
@@ -168,7 +160,188 @@
         </a>
       </div>
     </div>
-    <% include partials/cursos %>
+    <!-- Precios -->
+    <div class="row bg-light" id="cursos">
+      <div class="col-md-12 p-5 text-center">
+        <h2 class="mb-5">Elige la modalidad y comienza hoy mismo</h2>
+        <div class="card-deck mb-3 text-center">
+          <div class="card mb-4 shadow-sm">
+            <div class="card-header">
+              <h4 class="my-0 font-weight-normal">Online</h4>
+            </div>
+            <div class="card-body d-flex flex-column">
+              <h1 class="card-title pricing-card-title">
+                150.000 <small class="text-muted">CLP</small>
+              </h1>
+              <ul class="list-unstyled mt-3 mb-4 text-left">
+                <li>
+                  <i class="fas fa-check"></i>
+
+                  12 hrs de video
+                </li>
+                <li>
+                  <i class="fas fa-check"></i>
+
+                  10 Ejercicios practicos
+                </li>
+                <li>
+                  <i class="fas fa-check"></i>
+
+                  Preguntas via correo electronico
+                </li>
+                <li>
+                  <i class="fas fa-check"></i>
+
+                  Diploma de certificacion
+                </li>
+              </ul>
+              <a
+                href="https://www.flow.cl/btn.php?token=ucz0siv"
+                target="_blank"
+                class="mt-auto"
+              >
+                <button type="button" class="btn btn-lg btn-block btn-primary">
+                  Inscribete ahora
+                </button>
+              </a>
+            </div>
+          </div>
+          <div class="card mb-4 shadow-sm" id="card__featured">
+            <div class="card-header">
+              <h4 class="my-0 font-weight-normal">Online PRO</h4>
+            </div>
+            <div class="card-body d-flex flex-column">
+              <h1 class="card-title pricing-card-title">
+                180.000 <small class="text-muted">CLP</small>
+              </h1>
+              <ul class="list-unstyled mt-3 mb-4 text-left">
+                <li>
+                  <i class="fas fa-check"></i>
+
+                  12 hrs de video
+                </li>
+                <li>
+                  <i class="fas fa-check"></i>
+
+                  10 Ejercicios practicos
+                </li>
+                <li>
+                  <i class="fas fa-check"></i>
+
+                  Asesoria directa via Whatsapp y llamadas
+                </li>
+                <li>
+                  <i class="fas fa-check"></i>
+
+                  Diploma de certificacion
+                </li>
+              </ul>
+              <a
+                href="https://www.flow.cl/btn.php?token=ag7rqm1"
+                target="_blank"
+                class="mt-auto"
+              >
+                <button type="button" class="btn btn-lg btn-block btn-primary">
+                  Inscribete ahora
+                </button>
+              </a>
+            </div>
+          </div>
+          <div class="card mb-4 shadow-sm">
+            <div class="card-header">
+              <h4 class="my-0 font-weight-normal">Grupal GOLD</h4>
+            </div>
+            <div class="card-body d-flex flex-column">
+              <h1 class="card-title pricing-card-title">
+                350.000 <small class="text-muted">CLP</small>
+              </h1>
+              <ul class="list-unstyled mt-3 mb-4 text-left">
+                <li>
+                  <i class="fas fa-check"></i>
+                  Curso online incluido
+                </li>
+                <li>
+                  <i class="fas fa-check"></i>
+                  Dos dias de practicas presenciales con la profesora
+                </li>
+                <li>
+                  <i class="fas fa-check"></i>
+                  Asesoria directa via whatsapp y llamadas
+                </li>
+                <li>
+                  <i class="fas fa-check"></i>
+                  Minimo de 5 alumnas
+                </li>
+                <li>
+                  <i class="fas fa-check"></i>
+                  Diploma de certificacion
+                </li>
+              </ul>
+              <a
+                href="https://www.flow.cl/btn.php?token=c9bqsi3"
+                target="_blank"
+                class="mt-auto"
+              >
+                <button type="button" class="btn btn-lg btn-block btn-primary">
+                  Inscribete ahora
+                </button>
+              </a>
+            </div>
+          </div>
+          <div class="card mb-4 shadow-sm">
+            <div class="card-header">
+              <h4 class="my-0 font-weight-normal">Personalizado GOLD</h4>
+            </div>
+            <div class="card-body d-flex flex-column">
+              <h1 class="card-title pricing-card-title">
+                500.000 <small class="text-muted">CLP</small>
+              </h1>
+              <ul class="list-unstyled mt-3 mb-4 text-left">
+                <li>
+                  <i class="fas fa-check"></i>
+
+                  Curso online incluido
+                </li>
+                <li>
+                  <i class="fas fa-check"></i>
+
+                  Dos dias de practicas presenciales con la profesora
+                </li>
+                <li>
+                  <i class="fas fa-check"></i>
+
+                  Grupo reducido de maximo 2 alumnas
+                </li>
+                <li>
+                  <i class="fas fa-check"></i>
+
+                  Asesoria directa via whatsapp y llamadas
+                </li>
+                <li>
+                  <i class="fas fa-check"></i>
+
+                  Diploma de certificacion
+                </li>
+              </ul>
+              <a
+                href="https://www.flow.cl/btn.php?token=jgcrqva"
+                target="_blank"
+                class="mt-auto"
+              >
+                <button type="button" class="btn btn-lg btn-block btn-primary">
+                  Inscribete ahora
+                </button>
+              </a>
+            </div>
+          </div>
+        </div>
+        <img
+          src="/images/logo_webpay_plus.svg"
+          alt="logo de webpay"
+          width="300px"
+        />
+      </div>
+    </div>
     <!-- prettier-ignore -->
     <% include partials/allpages/footer %> 
     <% include partials/allpages/scripts %>
