responsive added to lp video fixed

--- a/views/cursodemicroblading.ejs
+++ b/views/cursodemicroblading.ejs
@@ -14,13 +14,13 @@
       <div class="row">
         <div class="col-12 text-center">
           <h4 class="mb-4">👇 Lo que dicen de nosotros 👇</h4>
-          <iframe
-            src="https://www.youtube-nocookie.com/embed/_YMCugve7bM"
-            frameborder="0"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          >
-          </iframe>
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe
+              class="embed-responsive-item"
+              src="https://www.youtube-nocookie.com/embed/_YMCugve7bM"
+              allowfullscreen
+            ></iframe>
+          </div>
         </div>
         <div class="col-12 text-center">
           <h4 class="mb-4">Multiples modalidades para elegir</h4>
