--- a/views/partials/allpages/numberbar.ejs
+++ b/views/partials/allpages/numberbar.ejs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-secondary bg-secondary">
   <div class="container">
-    <span class="navbar-text font-italic text-center ml-auto">
-    <a href="" id="numberbar__a"> Llama +56 9 9042 2712</a>
+    <span class="navbar-text font-italic text-center ml-auto mr-auto">
+    <a href="tel:+56990422712" id="numberbar__a" style='font-size: large;'> Llama +56 9 9042 2712</a>
   </div>
   </span>
 </nav>
