--- a/views/partials/servicios.ejs
+++ b/views/partials/servicios.ejs
@@ -1,5 +1,5 @@
 <div class="row" id="servicios">
-  <div class="col-md-12 p-5 text-center">
+  <div class="col-12 p-5 text-center">
     <h2 class="mb-5">Servicios</h2>
     <div class="card-group">
       <div class="card">
