bug in link prices fixed

--- a/views/cursodemicroblading.ejs
+++ b/views/cursodemicroblading.ejs
@@ -224,11 +224,7 @@
                 </li>
                 <% }) %>
               </ul>
-              <a
-                href="https://www.flow.cl/btn.php?token=ucz0siv"
-                target="_blank"
-                class="mt-auto"
-              >
+              <a href="<%=curso.linkPago %>" target="_blank" class="mt-auto">
                 <button type="button" class="btn btn-lg btn-block btn-primary">
                   Inscribete ahora
                 </button>
